---------------------------------------------------------------------------------------------------
Version: 0.28.0
Date: ????
  Features:
    - Added Copy and Cut with stage info! Allows moving entities while preserving stage updates/other stage info. See the mod portal description/readme for more info.
    - Added a Force delete selection planner.
    - Force delete custom input now supports undo.
  Graphics:
    - Updated graphics for staged-deconstruct tool.
---------------------------------------------------------------------------------------------------
Version: 0.27.5
Date: 2024-01-27
  Bugfixes:
    - Fix that upgrading belt didn't apply changes to all stages
---------------------------------------------------------------------------------------------------
Version: 0.27.4
Date: 2024-01-19
  Bugfixes:
    - Fix wrong behavior of the auto landfill blueprint option.
---------------------------------------------------------------------------------------------------
Version: 0.27.3
Date: 2024-01-17
  Bugfixes:
    - Fix compatibility with modded tanks (e.g. Angel's petrochem valves).
---------------------------------------------------------------------------------------------------
Version: 0.27.2
Date: 2024-01-17
  Bugfixes:
    - Fix crash if another mod deletes an entity immediately it is created.
---------------------------------------------------------------------------------------------------
Version: 0.27.1
Date: 2023-12-28
  Bugfixes:
    - The "auto-landfill" option now respects the selected tile.
    - Rotating an inserter will also rotate custom pickup/drop locations.
---------------------------------------------------------------------------------------------------
Version: 0.27.0
Date: 2023-12-14
  Features:
    - You can now select a specific tile to be used for landfill (or other purposes)
---------------------------------------------------------------------------------------------------
Version: 0.26.2
Date: 2023-12-14
  Bugfixes: