@@ -54,10 +54,12 @@ bp100:toggle-staged-copy=When holding a copy or cut tool, switch to the staged c
 preview-entity=__1__ (preview)
 unnamed-project=<Unnamed project __1__>
 
+stage-move-tool-028-changed-notification=The stage move tool has changed in v0.28:\nAlt select (__CONTROL__select-for-cancel-deconstruct__) now [font=default-large-bold]sends[/font] entities to the target stage, but selects entities from all stages, not just the current stage.\nReverse select (__CONTROL__reverse-select__) has the same behavior (identical to the old alt-select behavior).
+
 [bp100.interaction]
 unexpected-error=An unexpected error occurred: __1__. Additional details outputted to log. Please report this to the mod author!
 
-blueprint-not-handled=WARNING: pasting from the blueprint [font=default-bold]library[/font] into a staged BP project may cause issues.\nTo fix, make a copy of the blueprint, and paste again using the copy.
+blueprint-not-handled=WARNING: pasting from the blueprint [font=default-large-bold]library[/font] into a staged BP project may cause issues.\nTo fix, make a copy of the blueprint, and paste again using the copy.
 
 entity-moved-from-stage=Entity moved from __1__
 entity-moved-back-to-stage=Entity moved back to __1__
